; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_vsprintf.c_symbol_string.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_vsprintf.c_symbol_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.printf_spec = type { i32, i32, i32 }

@SPECIAL = common dso_local global i32 0, align 4
@SMALL = common dso_local global i32 0, align 4
@ZEROPAD = common dso_local global i32 0, align 4
@KSYM_SYMBOL_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i8*, i64, i32, i8)* @symbol_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @symbol_string(i8* %0, i8* %1, i8* %2, i64 %3, i32 %4, i8 signext %5) #0 {
  %7 = alloca %struct.printf_spec, align 4
  %8 = alloca { i64, i32 }, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8, align 1
  %13 = alloca i64, align 8
  %14 = alloca { i64, i32 }, align 4
  %15 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %8, i32 0, i32 0
  store i64 %3, i64* %15, align 4
  %16 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %8, i32 0, i32 1
  store i32 %4, i32* %16, align 4
  %17 = bitcast %struct.printf_spec* %7 to i8*
  %18 = bitcast { i64, i32 }* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 12, i1 false)
  store i8* %0, i8** %9, align 8
  store i8* %1, i8** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8 %5, i8* %12, align 1
  %19 = load i8*, i8** %11, align 8
  %20 = ptrtoint i8* %19 to i64
  store i64 %20, i64* %13, align 8
  %21 = getelementptr inbounds %struct.printf_spec, %struct.printf_spec* %7, i32 0, i32 0
  store i32 16, i32* %21, align 4
  %22 = load i32, i32* @SPECIAL, align 4
  %23 = load i32, i32* @SMALL, align 4
  %24 = or i32 %22, %23
  %25 = load i32, i32* @ZEROPAD, align 4
  %26 = or i32 %24, %25
  %27 = getelementptr inbounds %struct.printf_spec, %struct.printf_spec* %7, i32 0, i32 1
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, %26
  store i32 %29, i32* %27, align 4
  %30 = getelementptr inbounds %struct.printf_spec, %struct.printf_spec* %7, i32 0, i32 2
  store i32 16, i32* %30, align 4
  %31 = load i8*, i8** %9, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = load i64, i64* %13, align 8
  %34 = bitcast { i64, i32 }* %14 to i8*
  %35 = bitcast %struct.printf_spec* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %34, i8* align 4 %35, i64 12, i1 false)
  %36 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %14, i32 0, i32 0
  %37 = load i64, i64* %36, align 4
  %38 = getelementptr inbounds { i64, i32 }, { i64, i32 }* %14, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = call i8* @number(i8* %31, i8* %32, i64 %33, i64 %37, i32 %39)
  ret i8* %40
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @number(i8*, i8*, i64, i64, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
